--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 
     <button id="surpriseButton">Нажми мене</button>
 
-    <img id="mainImage" src="your-image.jpg" alt="Секретне фото" style="display: none;">
+    <img id="mainImage" src="1.jpg" alt="Секретне фото" style="display: none;">
 
-    <audio id="mainAudio" src="your-sound.mp3"></audio>
+    <audio id="mainAudio" src="1.mp3"></audio>
 
 
     <script>
